Issue #3413736 by alex.87, DishaKatariya, Kanchan Bhogade, smustgrave: Form suffix element breaks into multiple lines in modal
(cherry picked from commit e819dc656925c7fb82ba3a3b8c393bc35cb546d7)

--- a/core/themes/claro/css/components/form.pcss.css
+++ b/core/themes/claro/css/components/form.pcss.css
@@ -110,6 +110,7 @@ tr .form-item,
 @media screen and (min-width: 601px) {
   .form-item__suffix {
     margin-inline-start: var(--space-xs);
+    white-space: nowrap;
   }
 }
 
